# Team-25-Lorem-Ipsum-PSI

./: README.md
src/app/: pubspec.yaml
src/app/ios/Runner.xcodeproj/: project.pbxproj
src/app/lib/: app.dart  main.dart
src/app/lib/helpers/: theming.dart
src/app/lib/i18n/: en.i18n.json  strings.g.dart  strings_en.g.dart
src/app/lib/models/: cost_estimate.dart  meal.dart  nutrition_facts.dart  recipe.dart
src/app/lib/providers/: kitchen.dart  saus.dart
src/app/lib/screens/: delivery_map_screen.dart  home_screen.dart  meal_builder_screen.dart  meal_creation_screen.dart  recipe_view_screen.dart
src/app/lib/widgets/: global_kitchen_app_bar.dart  global_kitchen_buttons.dart  global_kitchen_sheet_chrome.dart  safe_area_blur_header.dart  slim_list_tile.dart  sliver_header.dart
src/backend/: Dockerfile  main.py  pyproject.toml  tests.py
src/backend/prompts/: cost-estimate.md  generate-recipe.md  ideate.md  nutrition-estimate.md  suggestions.md  text2image.md
src/backend/requests/: craft.http  description.http  ideate.http  image.http  imagine.http  modifications.http  modify.http  recipe.http  suggest.http  suggestions.http
